# TestGame

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  CreateDependencyGraph.cmd  Readme.md
Game/: CMakeLists.txt
Game/src/: Main.cpp
